# Trip-Planner

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.py  streamlit_app.py
agents/: agentic_workflow.py  graph.py  state.py
api/: main.py  routes.py
config/: config.yaml
core/: config.py  model_loader.py
database/: database.py  models.py
notebook/: experiments.ipynb
prompt_library/: prompt.py
prompts/: system_prompts.py
services/: graph_service.py
tools/: calculator_tool.py  create_multicity_route_tool.py  currency_conversion_tool.py  flight_search_tool.py  generate_itinerary_tool.py  hotel_search_tool.py  search_place_tool.py  weather_info_tool.py
utils/: model_loader.py
